--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ build/Release
 
 # Dependency directories
 node_modules/
+package-lock.json
+./node_modules/
+./*/**/node_modules/
 jspm_packages/
 
 # Typescript v1 declaration files
